
[#_non-breaking-changes]
=== Non-breaking changes

// #35635, #34999
* Newly-added compliance checks are set to ignore on pre-existing compliance rules, regardless of severity.

[#_known-issues]
=== Known issues

// #35809
* Both the /agentless/scan and /agentless/progress API endpoints introduced in 22.01 are available as v1 endpoints in the open API specification file.
The versioned endpoints for 22.01 are not in the open API specification file.

// #33786
* CIS Docker Benchmark v1.3.1 recommendation 2.1 ("Run the Docker daemon as a non-root user") is not supported due to a https://github.com/moby/moby/issues/41457[bug in Docker].

// PCSUP-7684
* Upgrading to 22.01.839 or 22.01.840 fails when you have alert profiles that were set up in version 20.09 or earlier. This issue is caused because of a parsing error in a field with a null value.
+
Workaround until this issue is fixed in 22.01 Update 1:
+
. Reinstall the 21.08.525 console and restore from the backup.
+
. Do one of the following: 
+
** Delete existing alert profiles and recreate after upgrade to 22.01, or
** Exec to the console.
+
a. Run mongo and run the following commands:
+
----
use twistlock
db.getCollection('alertProfiles').updateMany({"xsoar": null}, {"$unset": {"xsoar":1}})
exit
----
+
b. Exit and restart the Console.
+
. Upgrade to 22.01.

[#_limitations]
=== Limitations
// added this on Feb 22, 2022; need an issue ID
When using the automatic renewal of certificates issued by Console, Serverless Defenders have a current certificate only, and if it expires the Defenders must be redeployed.


[#_end-of-support-notifications]
=== End of support notifications

The following list of items are no longer supported in 22.01.

// #34017, #27635
Operating systems:

* Ubuntu 16.04 (Xenial Xerus) is no longer supported.
* Debian 9 (Stretch) is no longer supported.

Orchestrators:

* GKE using Docker is no longer supported.