@@ -117,7 +117,7 @@ NOTE: GCOOS is purposefully minimalistic. It doesn’t support installing new pa
 NOTE: Runtime prevent capability is supported only for DNS events. Other prevent capablities are not supported.
 
 |Red Hat
-|Red Hat Enterprise Linux 6 - host Vulnerabilities/compliance only, Red Hat Enterprise Linux 7, Red Hat Enterprise Linux 8, Red Hat Enterprise Linux CoreOS (RHCOS) versions included in supported OpenShift releases
+|Red Hat Enterprise Linux 7, Red Hat Enterprise Linux 8, Red Hat Enterprise Linux CoreOS (RHCOS) versions included in supported OpenShift releases
 
 |Ubuntu
 |Ubuntu 20.04 LTS, Ubuntu 18.04 LTS
@@ -262,7 +262,7 @@ Native Kubernetes 1.21, 1.22 (containerd 1.4.11)
 
 Native Kubernetes - 1.21, 1.22 Docker 20.10.9
 
-Lightweight Kubernetes v1.21.7 and k3s1 Containerd (1.4.12-k3s1) 
+RKE2 v1.22.5+rke2r1 with containerd 1.5.8-k3s
 
 |GKE
 |GKE 1.21.6  (containerd 1.4.8)
@@ -311,8 +311,10 @@ Prisma Cloud supports Istio 1.11.
 [.section]
 === Jenkins
 
-Supported versions: 2.289, ,2.235.1, 2.319.1 verified on 2 latest versions
-The Prisma Cloud Jenkins plugin supports Jenkins LTS releases.  For any given release of Prisma Cloud, the plugin supports those Jenkins LTS releases supported by the Jenkins project at the time of the Prisma Cloud release.
+Minimum supported version: 2.319.1
+
+The Prisma Cloud Jenkins plugin supports Jenkins LTS releases greater than 2.319.1.
+For any given release of Prisma Cloud, the plugin supports those Jenkins LTS releases supported by the Jenkins project at the time of the Prisma Cloud release.
 
 
 [.section]
