@@ -13,6 +13,8 @@ dir: release-information
 topics:
 - name: Prisma(TM) Cloud Compute Edition Release Information
   file: release-information.adoc
+- name: 22.01 Update 1
+  file: release-notes-22-01-update1.adoc
 - name: 22.01 (Build 22.01.840)
   file: release-notes-22-01-build-22-01-840.adoc
 - name: 22.01 Release Notes
