@@ -2,7 +2,7 @@
 kind: book
 title: Prisma Cloud Compute Edition Release Notes
 author: Prisma Cloud team
-version: 22.01 (Build 22.01.840)
+version: 22.01 Update 1
 ditamap: prisma-cloud-compute-edition-release-notes
 dita: techdocs/en_US/dita/prisma/prisma-cloud/21-08/prisma-cloud-compute-edition-release-notes
 ---
@@ -12,8 +12,8 @@ dir: release-information
 topics:
 - name: Prisma(TM) Cloud Compute Edition Release Information
   file: release-information.adoc
-- name: 22.01 (Build 22.01.840)
-  file: release-notes-22-01-build-22-01-840.adoc
+- name: 22.01 Update 1
+  file: release-notes-22-01-update1.adoc
 ---
 kind: chapter
 name: Get Help
