@@ -375,6 +375,9 @@ Be aware of the following breaking changes when upgrading to 22.01:
 [#_known-issues]
 === Known issues
 
+// #22837
+* When Defender is installed on Windows hosts in AWS, and Prisma Cloud Compute Cloud Discovery is configured to scan your environment for protected hosts, the Windows hosts running Defender are reported as unprotected.
+
 // #35809
 * Both the /agentless/scan and /agentless/progress API endpoints introduced in 22.01 are available as v1 endpoints in the open API specification file.
 The versioned endpoints for 22.01 are not in the open API specification file.
